# sihtest

./: SUPABASE_README.md  flask_app.py  index.html  mcpclient.py  netcdf_extractor.py  nodc_1900121_prof.nc  requirement.txt  sqlserver.py  supabaseserver.py
backend/: .env  flask_app.py  pyproject.toml  schema.txt  socket_manager.py  socketio_client_example.html
backend/Schemas/: output_Schema.txt
backend/mcpServers/: supabaseserver.py
backend/services/: crewai_service.py
client/: package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/components/: Analysis.jsx  ChatBox.jsx  ChatMap.jsx  ChatSidebar.jsx  Graphs.jsx  InputBox.jsx  MapAnalysis.jsx  Navbar.jsx
client/src/lib/: axios.js
client/src/pages/: Chatpage.jsx
client/src/slices/: chatSlice.js  chatmap.js
client/src/store/: store.js
server/: flask_app.py  index.html  mcpclient.py  requirement.txt
server/mcpServers/: supabaseserver.py
